--- a/viewer/static/css/styles.css
+++ b/viewer/static/css/styles.css
@@ -6,16 +6,21 @@ h1 {
     padding: 0.3rem;
 }
 
-.bgcolor-F3F9D2 {
-    background-color: #F3F9D2
+.bgcolor-dark-dark {
+    background-color: #3F4A86
 }
 
-.bgcolor-93827F {
+.bgcolor-dark {
     background-color: #7180AC
 }
 
-.bgcolor-DBFCFF {
+.bgcolor-light {
     background-color: #DBFCFF
+}
+
+.bg-transp-60 {
+    background-color: white;
+    opacity: 0.6
 }
 
 .pad-0 {
@@ -24,4 +29,8 @@ h1 {
 
 .text-white {
     color: white
+}
+
+.text-dark-dark {
+    color: #3F4A86
 }
