--- a/viewer/templates/base.html
+++ b/viewer/templates/base.html
@@ -25,8 +25,9 @@
             crossorigin="anonymous"></script>
 </head>
 
-<body>
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+<body class="bgcolor-light">
+<div class="d-flex flex-column">
+<nav class="navbar navbar-expand-lg navbar-dark bgcolor-dark-dark">
     <div class="container fixed">
         <a class="navbar-brand {% active_link 'index' strict=True %}" href="{% url 'index' %}">Voyage</a>
         <button
@@ -40,6 +41,11 @@
                 <li class="nav-item">
                     <a class="nav-link {% active_link 'index' strict=True %}" href="{% url 'index' %}">
                         Home
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">
+                        Some Page
                     </a>
                 </li>
             </ul>
@@ -66,15 +72,50 @@
         </div>
     </div>
 </nav>
-<div class="container">
-    <div class="jumbotron">
+<div class="container bgcolor-dark">
+    <div class="jumbotron bgcolor-dark pr-0 pl-0 pu-0 pb-2">
+        {% block carousel %}{% endblock %}
     </div>
-    <div>
+    <div class="pb-5">
         {% block content %}{% endblock %}
     </div>
 </div>
 <div class="footer bg-dark">
-    {% block footer %}{% endblock %}
+    <nav class="navbar navbar-dark bg-dark navbar-expand-lg">
+        <div class="container fixed d-flex justify-content-center">
+            <div id="navbarNavAltMarkupFooter">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link {% active_link 'help' strict=True %}" href="{% url 'index' %}">
+                            Help
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link {% active_link 'contact' strict=True %}" href="{% url 'index' %}">
+                            Contact
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link {% active_link 'advertising' strict=True %}" href="{% url 'index' %}">
+                            Advertising
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link {% active_link 'conditions of use' strict=True %}" href="{% url 'index' %}">
+                            Conditions of Use
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link {% active_link 'privacy policy' strict=True %}" href="{% url 'index' %}">
+                            Privacy Policy
+                        </a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+    <p class="text-center pb-5 text-white">© 2025 by Solar Empire Inc.</p>
+</div>
 </div>
 </body>
 
