--- a/viewer/templates/form_trip.html
+++ b/viewer/templates/form_trip.html
@@ -4,32 +4,31 @@
     <form method="post" enctype="multipart/form-data">
         {% csrf_token %}
         {{ form.media.js }}
-        {{ form.non_field_errors }}
-        {{ form.code.errors }}
-        {{ form.where_from.errors }}
-        {{ form.where_to.errors }}
-        {{ form.where_to_hotel.errors }}
         <div class="form-group">
             <label for="{{ form.code.id_for_label }}">Code:</label>
             {{ form.code }}
+            <p class="textcolor: red">{{ form.code.errors }}</p>
         </div>
         <div class="row">
             <div class="col">
                 <div class="form-group">
                     <label for="{{ form.where_from.id_for_label }}">Where from:</label>
                     {{ form.where_from }}
+                    {{ form.where_from.errors }}
                 </div>
             </div>
             <div class="col">
                 <div class="form-group">
                     <label for="{{ form.where_to.id_for_label }}">Where to:</label>
                     {{ form.where_to }}
+                    {{ form.where_to.errors }}
                 </div>
             </div>
             <div class="col">
                 <div class="form-group">
                     <label for="{{ form.where_to_hotel.id_for_label }}">Hotel:</label>
                     {{ form.where_to_hotel }}
+                    {{ form.where_to_hotel.errors }}
                 </div>
             </div>
         </div>
@@ -38,26 +37,31 @@
                 <div class="form-group">
                     <label for="{{ form.airport_depart.id_for_label }}">Departure airport:</label>
                     {{ form.airport_depart }}
+                    {{ form.airport_depart.errors }}
                 </div>
             </div>
             <div class="col">
                 <div class="form-group">
                     <label for="{{ form.airport_arrive.id_for_label }}">Arrival airport:</label>
                     {{ form.airport_arrive }}
+                    {{ form.airport_arrive.errors }}
                 </div>
             </div>
         </div>
         <div class="form-group">
             <label for="{{ form.departure_date.id_for_label }}">Departure date:</label>
             {{ form.departure_date }}
+            {{ form.departure_date.errors }}
         </div>
         <div class="form-group">
             <label for="{{ form.return_date.id_for_label }}">Return date:</label>
             {{ form.return_date }}
+            {{ form.return_date.errors }}
         </div>
         <div class="form-group">
             <label for="{{ form.duration.id_for_label }}">Duration:</label>
             {{ form.duration }}
+            <p class="text-red">{{ form.duration.errors }}</p>
         </div>
         <div class="form-group">
             <label for="{{ form.type.id_for_label }}">Type:</label>
@@ -66,10 +70,12 @@
         <div class="form-group">
             <label for="{{ form.adult_price.id_for_label }}">Price for adults:</label>
             {{ form.adult_price }}
+            {{ form.adult_price.errors }}
         </div>
         <div class="form-group">
             <label for="{{ form.child_price.id_for_label }}">Price for children:</label>
             {{ form.child_price }}
+            {{ form.child_price.errors }}
         </div>
         <div class="form-group">
             <label for="{{ form.promoted.id_for_label }}">Promoted:</label>
@@ -78,10 +84,12 @@
         <div class="form-group">
             <label for="{{ form.adult_places.id_for_label }}">Places available for adults:</label>
             {{ form.adult_places }}
+            {{ form.adult_places.errors }}
         </div>
         <div class="form-group">
             <label for="{{ form.child_places.id_for_label }}">Places available for children:</label>
             {{ form.child_places }}
+            {{ form.child_places.errors }}
         </div>
         <input type="submit" value="Submit" class="btn btn-primary">
     </form>
