--- a/viewer/templates/index.html
+++ b/viewer/templates/index.html
@@ -4,12 +4,81 @@
     Main page
 {% endblock %}
 
-{% block content %}
-<div class="card" style="width: 18rem;">
-    <h1 class="card-title">Main Page</h1>
+{% block carousel %}
+<div id="carouselExampleIndicators" class="carousel slide d-flex flex-column" data-ride="carousel"  style="height: 435px">
+    <div class="carousel-inner border border-1 border-white">
+        <div class="carousel-item active">
+            <img src="{% static 'images/Egypt.JPG' %}" class="d-block w-100" alt="Egypt">
+            <div class="carousel-caption d-none d-md-block text-dark-dark bg-transp-60" style="font-weight: bold">
+                <h5>EGYPT</h5>
+                <p>Egypt is the most populous country in the Arab world and the third-most-populous country in Africa</p>
+            </div>
+        </div>
+        <div class="carousel-item">
+            <img src="{% static 'images/New_York.JPG' %}" class="d-block w-100" alt="New York">
+            <div class="carousel-caption d-none d-md-block text-dark-dark bg-transp-60" style="font-weight: bold">
+                <h5>NEW YORK</h5>
+                <p>New York, often called New York City or NYC, is the most populous city in the United States,
+                    located at the southern tip of New York State on one of the world's largest natural harbors.</p>
+            </div>
+        </div>
+        <div class="carousel-item">
+            <img src="{% static 'images/Prague.JPG' %}" class="d-block w-100" alt="Prague">
+            <div class="carousel-caption d-none d-md-block text-dark-dark bg-transp-60" style="font-weight: bold">
+                <h5>Prague</h5>
+                <p>Prague is the capital and the largest city of the Czech Republic situated in the middle of Bohemia on the Vltava River.</p>
+            </div>
+        </div>
+    </div>
+    <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+    </a>
+    <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+    </a>
+    <div>
+        <ol class="carousel-indicators">
+            <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+        </ol>
+    </div>
 </div>
-{% endblock %}
 
-{% block footer %}
-
+{% if promoted_trips %}
+<div id="carouselPromotedTrips" class="carousel slide d-flex align-items-start" data-ride="carousel" style="height: 610px">
+    <div class="carousel-inner">
+        {% for trips in promoted_trips %}
+            {% if forloop.first %}
+            <div class="carousel-item active">{% else %}<div class="carousel-item">{% endif %}
+                <div class="card-deck d-flex justify-content-around">
+                    {% for trip in trips %}
+                    <div class="d-flex justify-content-around flex-column" style="width: 20em; height: 530px">
+                        <img src="media/{{ trip.image_small }}" class="card-img-top" alt="{{ trip.where_to.name }}">
+                        <div class="card-body d-flex justify-content-center flex-column bgcolor-light">
+                            <h5 class="card-title">{{ trip.where_to }}, {{ trip.where_to_hotel.name }}</h5>
+                            <p class="card-text">{{ trip.short_description }}</p>
+                            <div class="card-footer d-inline-flex justify-content-between mt-auto">
+                                <h5>Price</h5>
+                                <a href="{% url 'trip_details' %}?trip={{ trip.id }}" class="btn btn-primary">{{ trip.adult_price }}</a>
+                            </div>
+                        </div>
+                    </div>
+                    {% endfor %}
+                </div>
+            </div>
+        {% endfor %}
+    </div>
+    <div class="mt-auto">
+        <ol class="carousel-indicators">
+            <li data-target="#carouselPromotedTrips" data-slide-to="0" class="active"></li>
+            <li data-target="#carouselPromotedTrips" data-slide-to="1"></li>
+        </ol>
+    </div>
+</div>
+{% else%}
+<p>There are no promoted trips in the database</p>
+{% endif %}
 {% endblock %}
