--- a/viewer/templates/base.html
+++ b/viewer/templates/base.html
@@ -87,6 +87,7 @@
     <div class="pb-5">
         {% block content %}{% endblock %}
     </div>
+    <div>
 </div>
 <div class="footer bg-dark">
     <nav class="navbar navbar-dark bg-dark navbar-expand-lg">
