--- a/viewer/templates/trip_details.html
+++ b/viewer/templates/trip_details.html
@@ -32,6 +32,10 @@
     <div class="card-body">
         <h5 class="card-title">About the trip</h5>
         <p class="card-text">{{ trip.description }}</p>
+        <h5 class="card-title">About hotel</h5>
+        <p class="card-text">{{ hotel.description }}</p>
+        <h5 class="card-title">Type of stay</h5>
+        <p class="card-text">{{ trip_type }}</p>
     </div>
 </div>
 {% endblock %}
