--- a/viewer/templates/form_trip_purchase.html
+++ b/viewer/templates/form_trip_purchase.html
@@ -23,6 +23,16 @@
             <p class="textcolor: red">{{ form.birth_date.errors }}</p>
         </div>
         <div class="form-group">
+            <label for="{{ form.email.id_for_label }}">E-mail:</label>
+            {{ form.email }}
+            <p class="textcolor: red">{{ form.email.errors }}</p>
+        </div>
+        <div class="form-group">
+            <label for="{{ form.phone_number.id_for_label }}">Phone number:</label>
+            {{ form.phone_number }}
+            <p class="textcolor: red">{{ form.phone_number.errors }}</p>
+        </div>
+        <div class="form-group">
             <label for="{{ form.amount_adult.id_for_label }}">Adults:</label>
             {{ form.amount_adult }}
             <p class="textcolor: red">{{ form.amount_adult.errors }}</p>
