feature (P.2): The amount of places in a trip is reduced after purchase. The available amount of places is shown in trip_details.html and form_trip_purchase.html pages.

--- a/viewer/templates/trip_details.html
+++ b/viewer/templates/trip_details.html
@@ -26,6 +26,9 @@
             <h5 class="card-title">Price</h5>
             <p class="card-text">Adults: {{ trip.adult_price }} CZK</p>
             <p class="card-text">Children: {{ trip.child_price }} CZK</p>
+            <h5 class="card-title">Available places</h5>
+            <p class="card-text">For adults: {{ trip.adult_places }}</p>
+            <p class="card-text">For children: {{ trip.child_places }}</p>
             <a href="{% url 'trip_purchase' %}?trip={{ trip.id }}" class="btn btn-primary">Purchase</a>
         </div>
     </div>
