--- a/viewer/templates/form_trip_purchase.html
+++ b/viewer/templates/form_trip_purchase.html
@@ -3,44 +3,60 @@
 {% block content %}
     <form method="post" enctype="multipart/form-data">
         {% csrf_token %}
-        {{ form.non_field_errors }}
+        <div class="text-warning">
+            {{ form.non_field_errors }}
+        </div>
         <div class="form-group">
             Fill in the required fields of the form to purchase the trip to {{ trip.where_to }}
         </div>
         <div class="form-group">
             <label for="{{ form.firstname.id_for_label }}">First name:</label>
             {{ form.firstname }}
-            <p class="textcolor: red">{{ form.firstname.errors }}</p>
+        </div>
+        <div class="text-warning">
+            {{ form.firstname.errors }}
         </div>
         <div class="form-group">
             <label for="{{ form.lastname.id_for_label }}">Second Name:</label>
             {{ form.lastname }}
-            <p class="textcolor: red">{{ form.lastname.errors }}</p>
+        </div>
+        <div class="text-warning">
+            {{ form.lastname.errors }}
         </div>
         <div class="form-group">
             <label for="{{ form.birth_date.id_for_label }}">Last Name:</label>
             {{ form.birth_date }}
-            <p class="textcolor: red">{{ form.birth_date.errors }}</p>
+        </div>
+        <div class="text-warning">
+            {{ form.birth_date.errors }}
         </div>
         <div class="form-group">
             <label for="{{ form.email.id_for_label }}">E-mail:</label>
             {{ form.email }}
-            <p class="textcolor: red">{{ form.email.errors }}</p>
+        </div>
+        <div class="text-warning">
+            {{ form.email.errors }}
         </div>
         <div class="form-group">
             <label for="{{ form.phone_number.id_for_label }}">Phone number:</label>
             {{ form.phone_number }}
-            <p class="textcolor: red">{{ form.phone_number.errors }}</p>
+        </div>
+        <div class="text-warning">
+            {{ form.phone_number.errors }}
         </div>
         <div class="form-group">
-            <label for="{{ form.amount_adult.id_for_label }}">Adults:</label>
+            <label for="{{ form.amount_adult.id_for_label }}">Adults (available places - {{ trip.adult_places }}):</label>
             {{ form.amount_adult }}
-            <p class="textcolor: red">{{ form.amount_adult.errors }}</p>
+        </div>
+        <div class="text-warning">
+            {{ form.amount_adult.errors }}
         </div>
         <div class="form-group">
-            <label for="{{ form.amount_child.id_for_label }}">Children:</label>
+            <label for="{{ form.amount_child.id_for_label }}">Children (available places - {{ trip.child_places }}):</label>
             {{ form.amount_child }}
-            <p class="textcolor: red">{{ form.amount_child.errors }}</p>
+        </div>
+        <div class="text-warning">
+            {{ form.amount_child.errors }}
         </div>
         <input type="hidden" name="trip_id" value="{{ trip.id }}">
         <input type="submit" value="Purchase" class="btn btn-primary">
