--- a/viewer/templates/form_trip_purchase.html
+++ b/viewer/templates/form_trip_purchase.html
@@ -1,8 +1,10 @@
 {% extends 'base.html' %}
+{% load math_filters %}
 
 {% block content %}
     <form method="post" enctype="multipart/form-data">
         {% csrf_token %}
+        {{ form.media }}
         <div class="text-warning">
             {{ form.non_field_errors }}
         </div>
@@ -57,6 +59,10 @@
         </div>
         <div class="text-warning">
             {{ form.amount_child.errors }}
+        </div>
+        <div class="form-group">
+            <label for="{{ form.total_price.id_for_label }}">Total price:</label>
+            {{ trip.adult_price }}
         </div>
         <input type="hidden" name="trip_id" value="{{ trip.id }}">
         <input type="submit" value="Purchase" class="btn btn-primary">
