--- a/viewer/static/css/styles.css
+++ b/viewer/static/css/styles.css
@@ -34,3 +34,14 @@ h1 {
 .text-dark-dark {
     color: #3F4A86
 }
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+    display: none;
+    -webkit-appearance: none;
+    margin: 0; /* <-- Apparently some margin are still there even though it's hidden */
+}
+
+input[type=number] {
+    -moz-appearance:textfield; /* Firefox */
+}
