--- a/viewer/templates/continent.html
+++ b/viewer/templates/continent.html
@@ -14,12 +14,13 @@
                 <h1>{{ trip.where_to.name }}</h1>
                 <p class="trips_line_descrioption">{{ trip.description }} </p>
             </div>
-
-                <h1 style="font-size: 30; color: black">Price:</h1>
-                <a href="{% url 'trip_details' %}?trip={{ trip.id }}" >
-                    <btn class="btn_trip_buy_line">{{ trip.adult_price }}</btn>
-                </a>
-                <h1 style="font-size: 20; color: black">For 1 adult</h1>
+                <div class="price_button_area">
+                    <h1 style="font-size: 30; color: black; margin-left: 1.5em;">Price:</h1>
+                    <a href="{% url 'trip_details' %}?trip={{ trip.id }}" >
+                        <btn class="btn_trip_buy_line">{{ trip.adult_price }}</btn>
+                    </a>
+                    <h1 style="font-size: 20; color: black; margin-top: 4.5em; margin-left: 1.8em;">For 1 adult</h1>
+                </div>
 
         </div>
     {% endfor %}
