--- a/viewer/static/css/styles.css
+++ b/viewer/static/css/styles.css
@@ -23,6 +23,51 @@ h1 {
     opacity: 0.6
 }
 
+.filter-by-country {
+    position: relative;
+    background: pink;
+    display: flex;
+    height: 200px;
+    border: 1px solid white;
+    margin-bottom: 3em;
+
+
+}
+
+
+.globe-image {
+
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.country-name-container {
+    padding: 0.7em;
+    position: absolute;
+    width: 100%;
+    top: 25%;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+
+
+    font-weight: bold;
+    color: white;
+    font-size: 35;
+    text-shadow: black 0px 0 10px;
+}
+
+.see-more-link {
+    color: white;
+}
+.country-name-link {
+    color: white;
+
+
+}
+
+
 .continent-image-row {
     display: flex;
     justify-content: space-between;
