--- a/viewer/templates/form_trip_purchase.html
+++ b/viewer/templates/form_trip_purchase.html
@@ -17,14 +17,14 @@
             {{ form.firstname.errors }}
         </div>
         <div class="form-group">
-            <label for="{{ form.lastname.id_for_label }}">Second Name:</label>
+            <label for="{{ form.lastname.id_for_label }}">Last Name:</label>
             {{ form.lastname }}
         </div>
         <div class="text-warning">
             {{ form.lastname.errors }}
         </div>
         <div class="form-group">
-            <label for="{{ form.birth_date.id_for_label }}">Last Name:</label>
+            <label for="{{ form.birth_date.id_for_label }}">Date of birth:</label>
             {{ form.birth_date }}
         </div>
         <div class="text-warning">
