git commit -m feature(HP.4): filtering trips by country list of countries functional

--- a/viewer/templates/countries_list.html
+++ b/viewer/templates/countries_list.html
@@ -5,6 +5,14 @@
 {% endblock %}
 
 {% block content %}
+    <div class="countries-list-columns">
+        {% for country in countries_list %}
+
+            <a class='country-list-link' href="{% url 'country_trips' %}?country={{country}}">
+                <h2>{{country}}</h2>
+            </a>
+        {% endfor %}
+    </div>
 
 
 
