change (P.5): The css class .alert-danger added to error messages in the TripForm via form_invalid method of the TripCreateView. The css classes .warning-text and pt-2 added to errors in the template form_trip.html.

--- a/viewer/static/css/styles.css
+++ b/viewer/static/css/styles.css
@@ -154,7 +154,13 @@ h1 {
     color: #3F4A86
 }
 
+.warning-text {
+    color: #721c24
+}
 
+.vert-align {
+    vertical-align: baseline;
+}
 
 
 input::-webkit-outer-spin-button,
