change (P.5): The template form_trip_purchase.html improved, a highlighting css class is added to errors in form_invalid method of TripPurchaseView.

--- a/viewer/templates/base.html
+++ b/viewer/templates/base.html
@@ -84,9 +84,9 @@
     <div class="pb-5">
         {% block content %}{% endblock %}
     </div>
-    <div>
 </div>
 <div class="footer bg-dark">
+    {% block footer %}{% endblock %}
     <nav class="navbar navbar-dark bg-dark navbar-expand-lg">
         <div class="container fixed d-flex justify-content-center">
             <div id="navbarNavAltMarkupFooter">
@@ -121,7 +121,6 @@
         </div>
     </nav>
     <p class="text-center pb-5 text-white">© 2025 by Solar Empire Inc.</p>
-</div>
 </div>
 </body>
 
