--- a/viewer/templates/form_trip_purchase.html
+++ b/viewer/templates/form_trip_purchase.html
@@ -3,64 +3,66 @@
     <form method="post" enctype="multipart/form-data">
         {% csrf_token %}
         {{ form.media }}
-        <div class="text-warning">
-            {{ form.non_field_errors }}
+        <p class="warning-text pt-2">{{ form.non_field_errors }}</p>
+        <p>Fill in the required fields of the form to purchase the trip to {{ trip.where_to }}</p>
+        <div class="row">
+            <div class="col">
+                <label for="{{ form.firstname.id_for_label }}">First name:</label>
+                <div class="form-group">
+                    {{ form.firstname }}
+                    <p class="warning-text pt-2">{{ form.firstname.errors.as_text }}</p>
+                </div>
+            </div>
+            <div class="col">
+                <div class="form-group">
+                    <label for="{{ form.lastname.id_for_label }}">Last Name:</label>
+                    {{ form.lastname }}
+                    <p class="warning-text pt-2">{{ form.lastname.errors.as_text }}</p>
+                </div>
+            </div>
         </div>
-        <div class="form-group">
-            Fill in the required fields of the form to purchase the trip to {{ trip.where_to }}
+        <div class="row pb-4 border-bottom">
+            <div class="col">
+                <div class="form-group">
+                    <label for="{{ form.birth_date.id_for_label }}">Date of birth:</label>
+                    {{ form.birth_date }}
+                    <p class="warning-text pt-2">{{ form.birth_date.errors.as_text }}</p>
+                </div>
+            </div>
+            <div class="col">
+                <div class="form-group">
+                    <label for="{{ form.email.id_for_label }}">E-mail:</label>
+                    {{ form.email }}
+                    <p class="warning-text pt-2">{{ form.email.errors.as_text }}</p>
+                </div>
+            </div>
+            <div class="col">
+                <div class="form-group">
+                    <label for="{{ form.phone_number.id_for_label }}">Phone number:</label>
+                    {{ form.phone_number }}
+                    <p class="warning-text pt-2">{{ form.phone_number.errors.as_text }}</p>
+                </div>
+            </div>
         </div>
-        <div class="form-group">
-            <label for="{{ form.firstname.id_for_label }}">First name:</label>
-            {{ form.firstname }}
+        <div class="row pt-4 pb-4 border-bottom">
+            <div class="col">
+                <div class="form-group">
+                    <label for="{{ form.amount_adult.id_for_label }}">Adults (available places - {{ trip.adult_places }}):</label>
+                    {{ form.amount_adult }}
+                    <p class="warning-text pt-2">{{ form.amount_adult.errors.as_text }}</p>
+                </div>
+            </div>
+            <div class="col">
+                <div class="form-group">
+                    <label for="{{ form.amount_child.id_for_label }}">Children (available places - {{ trip.child_places }}):</label>
+                    {{ form.amount_child }}
+                    <p class="warning-text pt-2">{{ form.amount_child.errors.as_text }}</p>
+                </div>
+            </div>
         </div>
-        <div class="text-warning">
-            {{ form.firstname.errors }}
-        </div>
-        <div class="form-group">
-            <label for="{{ form.lastname.id_for_label }}">Last Name:</label>
-            {{ form.lastname }}
-        </div>
-        <div class="text-warning">
-            {{ form.lastname.errors }}
-        </div>
-        <div class="form-group">
-            <label for="{{ form.birth_date.id_for_label }}">Date of birth:</label>
-            {{ form.birth_date }}
-        </div>
-        <div class="text-warning">
-            {{ form.birth_date.errors }}
-        </div>
-        <div class="form-group">
-            <label for="{{ form.email.id_for_label }}">E-mail:</label>
-            {{ form.email }}
-        </div>
-        <div class="text-warning">
-            {{ form.email.errors }}
-        </div>
-        <div class="form-group">
-            <label for="{{ form.phone_number.id_for_label }}">Phone number:</label>
-            {{ form.phone_number }}
-        </div>
-        <div class="text-warning">
-            {{ form.phone_number.errors }}
-        </div>
-        <div class="form-group">
-            <label for="{{ form.amount_adult.id_for_label }}">Adults (available places - {{ trip.adult_places }}):</label>
-            {{ form.amount_adult }}
-        </div>
-        <div class="text-warning">
-            {{ form.amount_adult.errors }}
-        </div>
-        <div class="form-group">
-            <label for="{{ form.amount_child.id_for_label }}">Children (available places - {{ trip.child_places }}):</label>
-            {{ form.amount_child }}
-        </div>
-        <div class="text-warning">
-            {{ form.amount_child.errors }}
-        </div>
-        <input type="hidden" name="adult_price" value="{{ trip.adult_price }}">
-        <input type="hidden" name="child_price" value="{{ trip.child_price }}">
-        <div class="d-flex flex-column justify-content-end">
+        <div class="row d-flex flex-column justify-content-end pt-4 border-bottom">
+            <input type="hidden" name="adult_price" value="{{ trip.adult_price }}">
+            <input type="hidden" name="child_price" value="{{ trip.child_price }}">
             <div class="d-flex flex-row justify-content-end align-items-baseline">
                 <label for="{{ form.total_adult_price.id_for_label }}">Coast for adults:</label>
                 <div style="width: 100px; padding-right: 5px">{{ form.total_adult_price }}</div>
@@ -76,8 +78,10 @@
                 <div style="width: 100px; padding-right: 5px">{{ form.total_price }}</div>
                 <p>CZK</p>
             </div>
+            <input type="hidden" name="trip_id" value="{{ trip.id }}">
         </div>
-        <input type="hidden" name="trip_id" value="{{ trip.id }}">
-        <input type="submit" value="Purchase" class="btn btn-primary">
+        <div class="d-flex justify-content-center pt-4">
+            <input type="submit" value="Purchase" class="btn btn-primary">
+        </div>
     </form>
 {% endblock %}
